@startuml MongoAdapterDiagram
skinparam dpi 200
skinparam DefaultFontName Inconsolata

class Mongo_Adapter{
    - mongo_instance_ : instance 
    - uri_ : uri
    - client_ : client 
    - db_ : database

    + Mongo_Adapter()
    + write_robot( robot : const Robots& ) : void 
    + read_robot( id : int ) : Robots
    + read_all_robots() : vector<Robots>
    + delete_robot(id : int) : string
    + delete_all_robots() : void
    + get_all_ids() : vector<int> 
    + update_robot(int id, int water_level, int battery_level)
    + write_rooms(rooms : vector<Room>) : void
    + update_room_availability(id : int, availability : string) : void
    + read_room(int id): Room
    + delete_rooms() : void
    + read_all_rooms() : vector<Room>
    + write_task(new_task : Robots) : void
    + write_task(id : int, room : int) : void
    + read_ongoing_task(id : int) : Robots;
    + read_all_ongoing_tasks() : vector<Robots> 
    + read_robot_tasks(int id) : vector<Robots> 
    + read_all_tasks() : vector<Robots> 
    + update_task_status(updates : vector<Robots>) : void 
    + delete_all_tasks() : void
    + get_error_log(id : int) : vector<string>  
    + delete_error_log() : void 
}

abstract Adapter{
    + \~ Adapter()
    + write_robot( robot : const Robots& ) : void 
    + read_robot( id : int ) : Robots
    + read_all_robots() : vector<Robots>
    + delete_robot(id : int) : string
    + delete_all_robots() : void
    + get_all_ids() : vector<int> 
    + update_robot(int id, int water_level, int battery_level)
    + write_rooms(rooms : vector<Room>) : void
    + update_room_availability(id : int, availability : string) : void
    + read_room(int id): Room
    + delete_rooms() : void
    + read_all_rooms() : vector<Room>
    + write_task(new_task : Robots) : void
    + write_task(id : int, room : int) : void
    + read_ongoing_task(id : int) : Robots;
    + read_all_ongoing_tasks() : vector<Robots> 
    + read_robot_tasks(int id) : vector<Robots> 
    + read_all_tasks() : vector<Robots> 
    + update_task_status(updates : vector<Robots>) : void 
    + delete_all_tasks() : void
    + get_error_log(id : int) : vector<string>  
    + delete_error_log() : void
} 

class Robot {
    -robot_id: int
    -robotSize: string
    -waterLevel: int
    -batteryLevel: int
    -errorStatus: string = ""
    -taskStatus: string = ""
    -taskRoom: int = 0
    -functionType: string
    -location_x: int = 0
    -location_y: int = 0
    +getRobotId(): int
    +getRobotSize(): string
    +getTaskStatus(): string
    +getFunction(): string
    +getBatteryLevel(): int
    +getWaterLevel(): int
    +getLocationX(): int
    +getLocationY(): int
    +getTaskRoom(): int
    +reportError(): string
    +canClean(room_id: int): boolean
    +doTask(room_id: int): void
    +add_robot(robot_list: List<Robot>): void
    +field_engineer_view_status(): void
}

Adapter <|-- Mongo_Adapter : implements

Robot <-- Mongo_Adapter : uses


@enduml 